; ModuleID = '/home/carl/AnghaBench/linux/drivers/of/extr_address.c_of_address_to_resource.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/of/extr_address.c_of_address_to_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.resource = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"reg-names\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @of_address_to_resource(%struct.device_node* %0, i32 %1, %struct.resource* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.device_node*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.resource*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.device_node* %0, %struct.device_node** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.resource* %2, %struct.resource** %7, align 8
  store i8* null, i8** %11, align 8
  %12 = load %struct.device_node*, %struct.device_node** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = call i32* @of_get_address(%struct.device_node* %12, i32 %13, i32* %9, i32* %10)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %4, align 4
  br label %31

20:                                               ; preds = %3
  %21 = load %struct.device_node*, %struct.device_node** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = call i32 @of_property_read_string_index(%struct.device_node* %21, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %22, i8** %11)
  %24 = load %struct.device_node*, %struct.device_node** %5, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i8*, i8** %11, align 8
  %29 = load %struct.resource*, %struct.resource** %7, align 8
  %30 = call i32 @__of_address_to_resource(%struct.device_node* %24, i32* %25, i32 %26, i32 %27, i8* %28, %struct.resource* %29)
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %20, %17
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32* @of_get_address(%struct.device_node*, i32, i32*, i32*) #1

declare dso_local i32 @of_property_read_string_index(%struct.device_node*, i8*, i32, i8**) #1

declare dso_local i32 @__of_address_to_resource(%struct.device_node*, i32*, i32, i32, i8*, %struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
